# yuzhu-arcana-pet

./: .gitignore  PHASE4C_HOTFIX_REPORT_2026-06-23.md  PHASE4C_RUNTIME_VERIFICATION_REPORT_2026-06-23.md  PHASE4C_WORK_REPORT_2026-06-23.md  README.md
apps/desktop-pet/: README.md  index.html  package-lock.json  package.json
apps/desktop-pet/public/assets/alice/: README.md  manifest.json
apps/desktop-pet/src/: App.css  App.tsx  index.css
apps/desktop-pet/src-tauri/: Cargo.toml  tauri.conf.json
apps/desktop-pet/src-tauri/capabilities/: default.json
apps/desktop-pet/src/pet/: ParticleLayer.tsx  PetStage.tsx  SpeechBubble.tsx  idleBehavior.ts  localSettings.ts  manifest.ts  petConfig.ts  replyDisplay.ts  socket.ts  stateMachine.ts
docs/reports/: PHASE3_ASTRBOT_BRIDGE_FINAL_REPORT_2026-06-22.md  PHASE4B_LATEST_WORK_REPORT_2026-06-22.md
plugins/astrbot_plugin_desktop_pet_bridge/: README.md  _conf_schema.json  emotion_router.py  main.py  metadata.yaml
tools/: check_public_clean.ps1  import_alice_assets.ps1  phase4c_verify_bubble_anchor.js  prepare_local_runtime.ps1  run_tauri_dev_phase4c.ps1
