[package]
name = "desktop_pet"
version = "0.1.0"
description = "AstrBot desktop pet MVP shell"
authors = ["Codex"]
edition = "2021"

[lib]
name = "desktop_pet_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tauri = { version = "2", features = [] }
